<resources>
    <string name="app_name">App Wheel</string>
    <string name="stop_movement">Parar</string>
    <string name="first_tutorial_message">Mantenha o dispositivo em posição horizontal.</string>
    <string name="directions_movement">Direções</string>
    <string name="second_tutorial_message">Para alterar direções, incline o dispositivo para os lados.</string>
    <string name="acceleration_movement">Aceleração</string>
    <string name="third_tutorial_message">Para acelerar ou dar ré, incline o dispositivo para frente ou para trás.</string>
    <string name="skip">Pular</string>
    <string name="next">Avançar</string>
    <string name="back">Voltar</string>
</resources>
