<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.renanrhoden.appwheel.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/headerText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="70dp"
        android:background="@color/teal_400"
        android:paddingStart="@dimen/tutorial_padding"
        android:paddingTop="@dimen/tutorial_padding"
        android:text="@string/directions_movement"
        android:textColor="@android:color/white"
        android:textSize="@dimen/movement_tutorial"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="0dp"
        android:layout_height="140dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/teal_400"
        android:paddingStart="@dimen/tutorial_padding"
        android:paddingTop="@dimen/tutorial_padding"
        android:text="@string/second_tutorial_message"
        android:textColor="@android:color/white"
        android:textSize="@dimen/message_tutorial"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerText"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/skipButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="23dp"
        android:text="@string/skip"
        app:layout_constraintBottom_toBottomOf="@+id/descriptionText"
        app:layout_constraintRight_toLeftOf="@+id/nextButton"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintRight_creator="1" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="7dp"
        android:onClick="nextTutorialScreen"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="@+id/descriptionText"
        app:layout_constraintRight_toRightOf="@+id/descriptionText"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintRight_creator="1" />

    <ImageView
        android:id="@+id/exampleImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="65dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nextButton"
        app:srcCompat="@drawable/directions_image"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:layout_marginStart="8dp"
        android:onClick="backTutorialScreen"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="@+id/descriptionText"
        app:layout_constraintLeft_toLeftOf="@+id/descriptionText"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1" />

</android.support.constraint.ConstraintLayout>
